# cosmic-ext-disks

./: .dockerignore  .gitignore  Cargo.toml  README.md  justfile
disks-btrfs/: Cargo.toml
disks-btrfs-helper/: Cargo.toml
disks-btrfs-helper/src/: main.rs
disks-btrfs/src/: error.rs  lib.rs  subvolume.rs  usage.rs
disks-dbus/: Cargo.toml
disks-dbus/data/: dos_types.toml  gpt_types.toml
disks-dbus/src/: error.rs  format.rs  lib.rs  partition_type.rs  partition_types.rs  udisks_block_config.rs  usage.rs
disks-dbus/src/btrfs/: mod.rs
disks-dbus/src/dbus/: bytestring.rs
disks-dbus/src/disk/: block_index.rs  device_apis.rs  discovery.rs  format.rs  image.rs  mod.rs  model.rs  power.rs  resolve.rs  volume_tree.rs
disks-dbus/src/disks/: btrfs.rs  btrfs_native.rs  create_partition_info.rs  drive.rs  gpt.rs  image.rs  lvm.rs  manager.rs  mod.rs  ops.rs  partition.rs  process_finder.rs  smart.rs  volume.rs  volume_model.rs
disks-dbus/src/encryption/: config.rs  format.rs  list.rs  lock.rs  mod.rs  passphrase.rs  unlock.rs
disks-dbus/src/filesystem/: check.rs  config.rs  format.rs  label.rs  mod.rs  mount.rs  ownership.rs
disks-dbus/src/gpt/: mod.rs  probe.rs
disks-dbus/src/image/: backup.rs  loop.rs  loop_setup.rs  mod.rs  udisks_call.rs
disks-dbus/src/lvm/: list.rs  mod.rs
disks-dbus/src/manager/: disk_manager.rs  mod.rs
disks-dbus/src/operations/: filesystems.rs  luks.rs  mod.rs  partitions.rs
disks-dbus/src/partition/: create.rs  delete.rs  edit.rs  info.rs  mod.rs  resize.rs
disks-dbus/src/partition_types/: _source.rs  apm.rs  dos.rs  gpt.rs  mod.rs
disks-dbus/src/smart/: info.rs  mod.rs  test.rs
disks-dbus/src/util/: mod.rs
disks-dbus/src/volume/: mod.rs  node.rs
disks-ui/: Cargo.toml  README.md  justfile
disks-ui/i18n/en/: cosmic_ext_disks.ftl  disks_ui.ftl
disks-ui/i18n/fr/: cosmic_ext_disks.ftl
disks-ui/i18n/sv/: cosmic_ext_disks.ftl  disks_ui.ftl
disks-ui/resources/: app.desktop  app.metainfo.xml
disks-ui/src/: app.rs  i18n.rs  logging.rs  main.rs
disks-ui/src/client/: btrfs.rs  disks.rs  error.rs  filesystems.rs  image.rs  luks.rs  lvm.rs  mod.rs  partitions.rs
disks-ui/src/models/: helpers.rs  load.rs  mod.rs  ui_drive.rs  ui_volume.rs
disks-ui/src/ui/: error.rs  mod.rs
disks-ui/src/utils/: btrfs.rs  fs_tools.rs  mod.rs  segments.rs  ui.rs  unit_size_input.rs
disks-ui/src/views/: dialogs.rs  menu.rs  mod.rs  settings.rs  volumes.rs
storage-app/: Cargo.toml  README.md  justfile
storage-app/i18n/cs/: cosmic_ext_storage.ftl
storage-app/i18n/en/: cosmic_ext_storage.ftl
storage-app/i18n/fr/: cosmic_ext_storage.ftl
storage-app/i18n/sv/: cosmic_ext_storage.ftl
storage-app/resources/: app.desktop  app.metainfo.xml
storage-app/src/: app.rs  config.rs  i18n.rs  logging.rs  main.rs
storage-app/src/client/: btrfs.rs  connection.rs  disks.rs  filesystems.rs  image.rs  logical.rs  luks.rs  lvm.rs  mod.rs  partitions.rs  rclone.rs
storage-app/src/controls/: actions.rs  fields.rs  form.rs  icons.rs  layout.rs  mod.rs  status.rs  usage_pie.rs  wizard.rs
storage-app/src/errors/: ui.rs
storage-app/src/message/: app.rs  dialogs.rs  mod.rs  network.rs  volumes.rs
storage-app/src/models/: helpers.rs  load.rs  mod.rs  ui_drive.rs  ui_volume.rs
storage-app/src/network/: icons.rs
storage-app/src/state/: app.rs  btrfs.rs  dialogs.rs  logical.rs  mod.rs  network.rs  sidebar.rs  volumes.rs
storage-app/src/subscriptions/: app.rs
storage-app/src/ui/: error.rs  mod.rs  wizard.rs
storage-app/src/update/: btrfs.rs  drive.rs  logical.rs  mod.rs  nav.rs  network.rs  smart.rs
storage-app/src/utils/: mod.rs  partition_types.rs  segments.rs  ui.rs
storage-app/src/views/: app.rs  btrfs.rs  disk.rs  logical.rs  mod.rs  network.rs  settings.rs  sidebar.rs  volumes.rs
storage-app/src/volumes/: disk_header.rs  mod.rs
storage-btrfs/: Cargo.toml
storage-btrfs/src/: error.rs  lib.rs  subvolume.rs  types.rs  usage.rs
storage-contracts/: Cargo.toml
storage-contracts/src/: lib.rs
storage-contracts/src/client/: error.rs  luks.rs  partitions.rs
storage-contracts/src/protocol/: error.rs  id.rs  mod.rs  operation.rs
storage-contracts/src/traits/: discovery.rs  disk.rs  filesystem.rs  image.rs  luks.rs  mod.rs  partition.rs
storage-models/: Cargo.toml
storage-models/src/: btrfs.rs  common.rs  disk.rs  encryption.rs  filesystem.rs  lib.rs  lvm.rs  partition.rs  partition_types.rs  volume.rs
storage-service/: Cargo.toml
storage-service-macros/: Cargo.toml
storage-service-macros/src/: lib.rs
storage-service/src/: auth.rs  btrfs.rs  conversions.rs  disks.rs  error.rs  filesystems.rs  image.rs  luks.rs  lvm.rs  main.rs  partitions.rs  protected_paths.rs  rclone.rs  routing.rs  service.rs
storage-service/src/adapters/: mod.rs  udisks.rs
storage-service/src/domain/: btrfs.rs  filesystems.rs  image.rs  luks.rs  lvm.rs  mod.rs  partitions.rs
storage-service/src/handlers/: btrfs.rs  disk.rs  disks.rs  filesystems.rs  image.rs  logical.rs  luks.rs  lvm.rs  mod.rs  partition.rs  partitions.rs  rclone.rs  service.rs
storage-service/src/policies/: disks.rs  filesystems.rs  image.rs  logical.rs  mod.rs  partitions.rs  rclone.rs
storage-service/src/transport/: btrfs.rs  disks.rs  filesystems.rs  image.rs  luks.rs  lvm.rs  partitions.rs  rclone.rs
storage-service/src/utilities/: mod.rs  udisks.rs
storage-sys/: Cargo.toml
storage-sys/src/: error.rs  image.rs  lib.rs  rclone.rs
storage-sys/src/logical/: btrfs_tools.rs  lvm_tools.rs  mdadm_tools.rs  mod.rs
storage-sys/src/rclone/: mod.rs  mount_state.rs  systemd.rs  unix_user.rs
storage-testing/: Cargo.toml  README.md
storage-testing/container/: Containerfile  run-harness.sh
storage-testing/src/: artifacts.rs  cmd.rs  errors.rs  harness.rs  image_lab.rs  ledger.rs  lib.rs  runtime.rs  spec.rs
storage-testing/tests/: harness_smoke.rs  lab_smoke.rs  mod.rs
storage-types/: Cargo.toml
storage-types/src/: btrfs.rs  caller.rs  common.rs  disk.rs  encryption.rs  lib.rs  logical.rs  lvm.rs  partition_types.rs  rclone.rs  usage_scan.rs
(+575 files in other folders)
