[workspace]
members = [
    "disks-dbus",
    "disks-ui",
]
default-members = ["disks-ui"]
resolver = "2"

[workspace.dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10.0"
open = "5.3.2"
rust-embed = "8.7.2"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
anyhow = "1.0.98"
libc = "0.2.170"
duct = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.19"
thiserror = "2.0.18"
which = "8.0.0"
udisks2 = "0.3.1"
zbus = "5.13.2"
zbus_macros = "5.13.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
num-format = "0.4.4"
futures = "0.3.31"
enumflags2 = "0.7.12"


# workspace dependencies
disks-dbus = { package = "cosmic-ext-disks-dbus", path = "disks-dbus", version = "0.1.0" }

# build dependencies
vergen = { version = "8.3.2", features = ["build", "cargo", "rustc", "si", "git", "git2"] }

[workspace.dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "beddbf17703728182395a13267954d839226331d"
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # File dialogs via XDG desktop portal
    "xdg-portal",
]


# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.


# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
