[package]
name = "cosmic-ext-disks-btrfs-helper"
description = "Privileged helper binary for BTRFS operations"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "cosmic-ext-disks-btrfs-helper"
path = "src/main.rs"

[dependencies]
btrfsutil.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
