[package]
name = "cosmic-ext-disks-dbus"
description = "DBus interface for disk management"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
udisks2 = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
zbus_macros = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
futures  = { workspace = true }
enumflags2  = { workspace = true }
num-format = { workspace = true }
libc = { workspace = true }