[package]
name = "cosmic-ext-disks"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-only"
description = "A Disk utility for the COSMIC™ desktop"
repository = "https://github.com/cosmic-utils/cosmic-ext-disks"

[build-dependencies]
vergen = { workspace = true }

[dependencies]
futures-util = { workspace = true }
i18n-embed-fl = { workspace = true }
open = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true }
i18n-embed = { workspace = true }
libcosmic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num-format = { workspace = true}
anyhow = { workspace = true }
disks-dbus = { workspace = true }

