[package]
name = "cosmic-ext-storage"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "A Storage utility for the COSMIC™ desktop"
repository = "https://github.com/cosmic-utils/cosmic-ext-storage"

[features]
default = [
	"btrfs-tools",
	"lvm-tools",
	"rclone-tools",
	"fs-ext4",
	"fs-xfs",
	"fs-btrfs",
	"fs-vfat",
	"fs-ntfs",
	"fs-exfat",
]
btrfs-tools = []
lvm-tools = []
rclone-tools = []
fs-ext4 = []
fs-xfs = []
fs-btrfs = []
fs-vfat = []
fs-ntfs = []
fs-exfat = []

[build-dependencies]
vergen = { workspace = true }

[dependencies]
futures-util.workspace = true
i18n-embed-fl.workspace = true
open.workspace = true
rust-embed.workspace = true
tokio.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
num-format.workspace = true
anyhow.workspace = true
which.workspace = true
uuid.workspace = true
zbus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
storage-types.workspace = true
storage-contracts.workspace = true
