[package]
name = "storage-service-macros"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Procedural macros for storage-service D-Bus authorization"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
