[package]
name = "storage-service"
description = "D-Bus service for COSMIC Disks storage operations"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "cosmic-storage-service"
path = "src/main.rs"

[dependencies]
# D-Bus framework
zbus.workspace = true
zbus_polkit = "5.0"

# Async runtime
tokio.workspace = true
tokio-util = "0.7"
futures-util = "0.3"

# Utilities
uuid = { version = "1.11", features = ["v4"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# System integration
libc.workspace = true
nix = { version = "0.29", features = ["fs"] }
which = "7.0"

# UDisks2 bindings
udisks2.workspace = true
enumflags2.workspace = true

# Internal dependencies
storage-btrfs = { path = "../storage-btrfs" }
storage-dbus.workspace = true
storage-common.workspace = true
storage-sys = { path = "../storage-sys", package = "cosmic-ext-storage-storage-sys" }
