[package]
name = "storage-testing"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
which = { workspace = true }
async-trait = { workspace = true }
storage-contracts = { workspace = true }
storage-types = { workspace = true }
